@@ -71,6 +71,7 @@ fully-qualified type name?
 \faqtocpara{\ref{faq-semantics-section}: Semantics of type annotations}
 \\ \ref{faq-typestate}: How can I handle typestate, or phases of my program with different data properties?
 \\ \ref{faq-implicit-bounds}: Why are explicit and implicit bounds defaulted differently?
+\\ \ref{faq-writing-generics}: How should I annotate code that uses generics?
 \\ \ref{faq-runtime-retention}: Why are type annotations declared with \<@Retention(RetentionPolicy.RUNTIME)>?
 
 \faqtocpara{\ref{faq-create-a-checker-section}: Creating a new checker}
@@ -1325,6 +1326,71 @@ Here are some style guidelines:
 \end{itemize}
 
 
+\subsectionAndLabel{How should I annotate code that uses generics?}{faq-writing-generics}
+
+Suppose unannotated code contains a type parameter \code{<T>}.  How should
+you annotate that?
+
+This is really a question about Java's generic types, so if you understand
+Java generics, this question is moot.  However, Java generics can be hard
+to understand, so here is a brief explanation of some concrete annotations,
+using nullness annotations for concreteness.
+
+\begin{description}
+\item[\code{<T>}]
+  Any type argument may be supplied for \code{T}.
+
+  It is equivalent to \code{<T extends @Nullable Object>}, because
+  \code{@Nullable Object} is the top type in the type hierarchy.
+
+\item[\code{<T extends @Nullable Object>}]
+  Any type argument may be supplied for \code{T}.
+
+  It is equivalent to \code{<T>}, as noted above.
+
+\item[\code{<T extends Object>}]
+  \code{T} can be instantiated by any type whose qualifier is \code{@NonNull}.
+
+  The default annotation is \code{@NonNull}, and annotation defaults apply
+  to type uses such as \code{Object} but not to type variables such as
+  \code{T}.  Therefore, \code{<T extends Object>} is equivalent to
+  \code{<T extends @NonNull Object>}.  It permits any type argument that is
+  a subtype of \code{@NonNull Object}, which is any type argument whose
+  qualifier is \code{@NonNull} since \code{@NonNull} is the bottom type
+  qualifier in the type qualifier hierarchy.
+
+\item[\code{<T extends @NonNull Object>}]
+  \code{T} can be instantiated by any type whose qualifier is \code{@NonNull}.
+
+  It is equivalent to \code{<T extends Object>}, as noted above.
+
+\item[\code{<@Nullable T>}]
+  \code{T} can be instantiated by any type whose qualifier is \code{@Nullable}.
+
+  The annotation \code{@Nullable} before \code{T} applies to \code{T}'s
+  implicit lower bound.  There is no explicit upper bound (that is, no
+  \code{extends}), so the upper bound is the top type, \code{@Nullable
+    Object}, just as for \code{<T>}, which was discussed above.  Therefore,
+  \code{<@Nullable T>} is the same as \code{<T super @Nullable void extends
+    @Nullable Object>}, except that the latter is not legal Java.
+
+\item[\code{<T super @Nullable String>}]
+  \code{T} can be instantiated by any supertype of \code{@Nullable String},
+  which is any supertype of \code{String} (\code{Object},
+  \code{Serializable}, \code{CharSequence}, etc.) so long as its type
+  qualifier is \code{@Nullable}.
+
+\item[\code{<T super @NonNull String>}]
+  \code{T} can be instantiated by any supertype of \code{@NonNull String}.
+  Since \<@NonNull> is the bottom type qualifier, the instantiating type
+  can have any type qualifier.
+
+\end{description}
+
+For more details about how the Checker Framework supports generics and
+polymorphism, see \chapterpageref{polymorphism}
+
+
 \subsectionAndLabel{Why are type annotations declared with \<@Retention(RetentionPolicy.RUNTIME)>?}{faq-runtime-retention}
 
 Annotations such as \refqualclass{checker/nullness/qual}{NonNull} are
@@ -1838,4 +1904,4 @@ third-party tools.  The Checker Framework is one such tool.
 %%  LocalWords:  intExample1 intExample2 requiresPositive RUNTIME NullAway
 %%  LocalWords:  IllegalFormatException typequals typedef runtime nullaway
 %%  LocalWords:  covariance InheritedAnnotation someMethod jml jsr Java''
-% LocalWords:  checkers'' covariance'' contravariance''
+% LocalWords:  checkers'' covariance'' contravariance'' Xmx3g lookups
